--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://giovanigithub.github.io/developerFolio/",
-  "name": "developerfolio",
+  "homepage": "http://giovanigithub.github.io/portifolio/",
+  "name": "portifolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
