--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://giovaniangelo.github.io/portifolio/",
+  "homepage": "http://giovanigithub.github.io/portifolio/",
   "name": "portifolio",
   "version": "0.1.0",
   "private": true,
